[gd_scene load_steps=7 format=3 uid="uid://gmogqvxa4sv"]

[ext_resource type="Script" uid="uid://clwvkj710sp0g" path="res://Scripts/main_menu.gd" id="1_dnfjo"]
[ext_resource type="Theme" uid="uid://ducpp7i3myqe7" path="res://Assets/button_style_big.tres" id="2_257up"]
[ext_resource type="Theme" uid="uid://jf3dqc7k67gq" path="res://Assets/button_style_small.tres" id="3_3mro0"]
[ext_resource type="Texture2D" uid="uid://wdxh1wfs04pq" path="res://Assets/handpos.png" id="4_tu7k8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b7rmo"]
bg_color = Color(0, 0, 0, 0.352941)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 30.0
expand_margin_top = 10.0
expand_margin_right = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00u4r"]
bg_color = Color(0, 0, 0, 0.352941)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 20.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dnfjo")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -340.5
offset_right = 595.0
offset_bottom = 340.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.10748, 0.10748, 0.10748, 1)

[node name="MainMenu" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -206.0
offset_top = -85.0
offset_right = 206.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainMenu"]
custom_minimum_size = Vector2(0, 475)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_b7rmo")
text = "HSC SOFT
TYPING TUTOR"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Start Game" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme = ExtResource("2_257up")
text = "START"

[node name="Exit" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(110, 50)
layout_mode = 2
theme = ExtResource("2_257up")
text = "EXIT"

[node name="Bottom Row" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="Website" type="Button" parent="MainMenu/VBoxContainer/Bottom Row"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 50)
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("2_257up")
theme_override_font_sizes/font_size = 21
text = "SITE"

[node name="HowToPlay" type="Button" parent="MainMenu/VBoxContainer/Bottom Row"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 10
theme = ExtResource("2_257up")
theme_override_font_sizes/font_size = 29
text = "?"

[node name="HowToMenu" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -231.0
offset_right = 300.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HowToMenu"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_00u4r")

[node name="VBoxContainer" type="VBoxContainer" parent="HowToMenu/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HowToMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HowTo-Title" type="Label" parent="HowToMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "HOW TO TYPE"
horizontal_alignment = 1

[node name="CloseHowTo" type="Button" parent="HowToMenu/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_3mro0")
theme_override_font_sizes/font_size = 20
text = "✖"

[node name="HowTo-Text" type="Label" parent="HowToMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
text = "Placing your hands in the following position is the proper way to place your hands when typing:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HowTo-Text2" type="Label" parent="HowToMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
text = " - Hover the fingers on your left hand over the A, S, D and F keys. 
 - Hover the fingers on your right hand over the semicolon, L, K and J keys
"
autowrap_mode = 3

[node name="HandPosIMG" type="TextureRect" parent="HowToMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(478, 247)
layout_mode = 2
texture = ExtResource("4_tu7k8")
expand_mode = 5
stretch_mode = 5

[node name="SiteMenu" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -231.0
offset_right = 300.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="SiteMenu"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_00u4r")

[node name="VBoxContainer" type="VBoxContainer" parent="SiteMenu/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="SiteMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SiteTitle" type="Label" parent="SiteMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Itch.io ->"
horizontal_alignment = 1

[node name="CloseSite" type="Button" parent="SiteMenu/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_3mro0")
theme_override_font_sizes/font_size = 20
text = "✖"

[node name="SiteText" type="Label" parent="SiteMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
text = "The game's itch.io page is linked above. Please check the game's page for any updates, which may include:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="SiteText2" type="Label" parent="SiteMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
text = " - Bug Fixes
 - New Features (more prompts, difficulties, etc)
 - Further Information"
autowrap_mode = 3

[node name="SiteText3" type="Label" parent="SiteMenu/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
text = "
Thankyou for playing!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="DifficultySelect" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -231.0
offset_right = 300.0
offset_bottom = 231.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="DifficultySelect"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_00u4r")

[node name="VBoxContainer" type="VBoxContainer" parent="DifficultySelect/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="DifficultyTitle" type="Label" parent="DifficultySelect/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Select a Difficulty Level"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="DifficultySelect/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Beginner" type="Button" parent="DifficultySelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_257up")
text = "Beginner"

[node name="Intermediate" type="Button" parent="DifficultySelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_257up")
text = "Intermediate"

[node name="Advanced" type="Button" parent="DifficultySelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_257up")
text = "Advanced"

[node name="Professional" type="Button" parent="DifficultySelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_257up")
text = "Professional"

[node name="MasterClass" type="Button" parent="DifficultySelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_257up")
text = "Master Class"

[node name="CloseDifficulty" type="Button" parent="DifficultySelect/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Go Back"

[node name="HSeparator2" type="HSeparator" parent="DifficultySelect/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
